like button functionality

--- a/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
+++ b/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
@@ -11,6 +11,6 @@
     border-bottom: black 1px solid;
     padding: 20px;
     box-sizing: border-box;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
