--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -1,1 +1,27 @@
 /* TODO: Add sitewide styles */
+
+html,
+body {
+    height: 100%;
+}
+
+#root {
+    height: 100%;
+}
+
+#site-body {
+    height: 100%;
+    margin: 0;
+}
+
+* {
+    font-family: 'Outfit', sans-serif;
+}
+
+p {
+    margin: 1% 1% 1% 0;
+}
+
+:root {
+    --purple: #8E71A2;
+}
