--- a/react-vite/src/components/AlbumComponents/AlbumCard/AlbumCard.css
+++ b/react-vite/src/components/AlbumComponents/AlbumCard/AlbumCard.css
@@ -5,12 +5,14 @@
 
 .album-card-container {
   display: flex;
+  width: 250px;
+  height: 350px;
+  border-radius: 10px;
+  padding: 25px;
+  background-color: var(--purple);
+}
+
+.album-card-img-container {
   width: 100%;
-  height: 20%;
-  max-height: 20%;
-  border-bottom: black 1px solid;
-  padding: 20px;
-  box-sizing: border-box;
-  justify-content: space-between;
-  align-items: center;
+  height: 250px;
 }
