--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,3 +1,74 @@
 .profile-dropdown {
   position: absolute;
+  top: 4vh;
+  right: 3vw;
+  list-style-type: none;
+}
+
+.profile-dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  background: white;
+  border-radius: 5px;
+  padding: 20px;
+  border: black 3px solid;
+}
+
+.profile-dropdown-menu>li>a {
+  color: black;
+}
+
+.profile-dropdown-item {
+  margin-bottom: 8px;
+}
+
+.profile-logout-button-container {
+  padding-top: 8px;
+  margin-top: 8px;
+  border-top: black 2px solid;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.profile-dropdown-guest-item {
+  margin-bottom: 8px;
+  cursor: pointer;
+}
+
+.navbar {
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #8E71A2;
+  padding: 10px 20px;
+  transition: 0.5s;
+  box-sizing: border-box;
+  width: 100%;
+  height: 8vh;
+  top: 0;
+}
+
+.nav-buttons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  height: 100%;
+}
+
+.user-profile-button {
+  height: 5vh;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.fa-user-circle {
+  font-size: 4vh;
+}
+
+.logo-button {
+  height: 6vh;
 }
