--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -1,8 +1,11 @@
 .track-player {
+    overflow: hidden;
     position: sticky;
     bottom: 0px;
     background-color: var(--purple);
     height: 10vh;
     display: flex;
-    width: 100vw;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
 }
