underline styling, using demo user

--- a/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
+++ b/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
@@ -3,6 +3,10 @@
     color: black;
 }
 
+.track-card-link>p:hover {
+    text-decoration: underline;
+}
+
 .track-card-container {
     display: flex;
     width: 100%;
