--- a/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
+++ b/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
@@ -7,6 +7,10 @@
     text-decoration: underline;
 }
 
+.track-card-link>h2:hover {
+    text-decoration: underline;
+}
+
 .track-card-container {
     display: flex;
     width: 100%;
