--- a/react-vite/src/components/AlbumComponents/AlbumCard/AlbumCard.css
+++ b/react-vite/src/components/AlbumComponents/AlbumCard/AlbumCard.css
@@ -5,14 +5,34 @@
 
 .album-card-container {
   display: flex;
-  width: 250px;
-  height: 350px;
+  width: 200px;
+  height: 300px;
   border-radius: 10px;
   padding: 25px;
-  background-color: var(--purple);
+  background-color: #2b2d2e;
+  margin: 20px;
+  transition: background-color 0.25s ease;
+}
+.album-card-container:hover {
+  background-color: #4f5356
 }
 
 .album-card-img-container {
   width: 100%;
-  height: 250px;
+  height: 220px;
+}
+
+.album-card-image {
+  width: 100%;
+}
+
+.album-card-title {
+  color:white;
+  font-weight: 600;
+  font-size: x-large;
+  margin: 0 0 15px 0;
+}
+
+.album-card-artist {
+  color: gray;
 }
