--- a/react-vite/src/components/AlbumComponents/AlbumsIndex/AlbumsIndex.css
+++ b/react-vite/src/components/AlbumComponents/AlbumsIndex/AlbumsIndex.css
@@ -5,7 +5,14 @@
 
 .album-index-cards-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   max-width: 100%;
   max-height: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.album-index {
+  display: flex;
+  justify-content: center;
 }
