--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -40,7 +40,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #8E71A2;
+  background-color: black;
   padding: 10px 20px;
   transition: 0.5s;
   box-sizing: border-box;
@@ -58,7 +58,9 @@
 }
 
 .user-profile-button {
-  height: 5vh;
+  height: 25px;
+  width: 25px;
+  color: white;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -70,4 +72,35 @@
 
 .logo-button {
   height: 6vh;
+}
+
+/* .nav-buttons li .navigation {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+} */
+.navigation-link {
+  height: 25px;
+  width: 25px;
+  margin: 0 5px 0 0 ;
+  transition: height .25s ease, width .25s ease, color .25s ease;
+  color: gray;
+}
+.navigation-link:hover {
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  color: white;
+}
+
+.nav-button-icons-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  height: 100%;
+  margin: 0 15px 0 0 ;
 }
