--- a/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
+++ b/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
@@ -5,6 +5,7 @@
 .track-form-container {
     display: flex;
     flex-direction: column;
+    width: 50%;
 }
 
 .submitButtonWithLoadingIcon {
@@ -12,3 +13,10 @@
     height: 40px;
 }
 
+.form-input {
+    display: flex;
+}
+
+.form-input > label> input {
+    width: 100%;
+}
