--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -3,9 +3,10 @@
     position: sticky;
     bottom: 0px;
     background-color: var(--purple);
-    height: 10vh;
+    height: 8vh;
     display: flex;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
+    box-sizing: border-box;
 }
