--- a/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
+++ b/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
@@ -36,6 +36,7 @@ body {
     transition: background-color .25s ease;
     border-radius: 5px;
 }
+
 .track-card-container:hover {
     background-color: #2b2d2e;
 }
@@ -85,12 +86,15 @@ body {
 .track-card-container:hover .track-id {
     display: none;
 }
+
 .track-play-button {
     display: none;
 }
+
 .track-play-button:hover {
     cursor: pointer;
 }
+
 .track-card-container:hover .track-play-button {
     display: block;
 }
@@ -110,10 +114,15 @@ body {
     display: flex;
     align-items: center;
 }
+
 .like-heart-icon:hover {
     cursor: pointer;
 }
 
 .isPlaying {
     color: rgb(43, 181, 43);
+}
+
+.no-pointer:hover {
+    cursor: default
 }
