--- a/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
+++ b/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .submitButtonWithLoadingIcon {
