--- a/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
+++ b/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
@@ -5,11 +5,12 @@
 }
 
 .album-details-header-image-div {
-  width: 30%;
+  height: 26vh;
+  margin: 5vh 0 0 3vh;
 }
 
 .album-details-header-image-div img {
-  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 
@@ -70,4 +71,5 @@
 .play-update-delete-div {
   display: flex;
   align-items: center;
+  margin: 1vh 0 0 2vh;
 }
