--- a/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
+++ b/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
@@ -1,9 +1,16 @@
+#track-details-body {
+  background-image: linear-gradient(to bottom, rgb(43, 101, 181) 30%, rgba(255, 0, 0, 0));
+  background-size: 100% 40vh;
+  background-repeat: no-repeat;
+}
+
 .track-details-header-image-div {
-  width: 30%;
+  height: 26vh;
+  margin: 5vh 0 0 3vh;
 }
 
 .track-details-header-image-div img {
-  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 
