--- a/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
+++ b/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
@@ -42,7 +42,7 @@
 .track-details-header-playicon {
   width: 50px;
   height: 50px;
-  margin: 0 0 0 5px;
+  margin: 0 0 5px 5px;
 }
 
 .track-details-header-playicon:hover {
