--- a/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
+++ b/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
@@ -5,20 +5,53 @@
 .track-form-container {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
+    align-items: center;
     padding: 20px;
     box-sizing: border-box;
+    min-height: 84vh;
 }
 
 .submitButtonWithLoadingIcon {
     display: flex;
-    height: 40px;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 0;
 }
 
 .form-input {
     display: flex;
 }
 
-.form-input>label>input {
+.track-form-input {
     width: 100%;
+    margin: 20px 5px 0 5px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.track-form-input-file {
+    margin: 20px 5px 0 5px;
+}
+.track-form-input-file input {
+    margin: 0 5px;
+}
+.track-form-input-file select {
+    margin: 0 5px;
+}
+
+.track-form-input input {
+    width: 100%;
+    margin: 0 5px;
+}
+
+.track-form {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.album-form-container {
+    align-items: center;
 }
