--- a/react-vite/src/components/TrackComponents/TracksIndex/TracksIndex.css
+++ b/react-vite/src/components/TrackComponents/TracksIndex/TracksIndex.css
@@ -1,6 +1,7 @@
 .track-index-container {
     padding: 20px;
     box-sizing: border-box;
+    min-height: 84vh;
 }
 
 .track-index-cards-container {
