--- a/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
+++ b/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
@@ -2,6 +2,7 @@
   background-image: linear-gradient(to bottom, rgb(43, 101, 181) 30%, rgba(255, 0, 0, 0));
   background-size: 100% 40vh;
   background-repeat: no-repeat;
+  min-height: 84vh;
 }
 
 .track-details-header-image-div {
