--- a/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
+++ b/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
@@ -16,11 +16,11 @@
 }
 
 .album-details-album-word {
-  font-size: x-small;
+  font-size: small;
 }
 
 .album-details-album-name {
-  font-size: xx-large;
+  font-size: xxx-large;
   font-weight: 600;
 }
 
@@ -28,6 +28,10 @@
   display: flex;
   align-items: center;
   font-size: small;
+}
+
+.album-details-artist-year-length {
+  font-size: medium;
 }
 
 .album-details-header-div {
