--- a/react-vite/src/components/SplashPage/SplashPage.css
+++ b/react-vite/src/components/SplashPage/SplashPage.css
@@ -5,7 +5,7 @@
 }
 
 .splash-dev-name-icon-div {
-    display:flex;
+    display: flex;
     align-items: baseline;
 }
 
@@ -13,6 +13,12 @@
     height: 100%;
     color: gray;
     margin: 0 0 0 5px;
+    transition: all 500ms ease;
+}
+
+.splash-icon:hover {
+    transform: scale(1.3);
+    color: white;
 }
 
 .splash-welcome-div {
