--- a/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
+++ b/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
@@ -19,6 +19,25 @@
     margin: 10px 0;
 }
 
+.submitButtonWithLoadingIcon>button {
+    width: 120px;
+    height: 50px;
+    border: none;
+    border-radius: 4px;
+    transition: 250ms ease all;
+    font-weight: 700;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 5px;
+}
+
+.submitButtonWithLoadingIcon>button:hover {
+    transform: scale(1.1);
+}
+
 .form-input {
     display: flex;
 }
@@ -34,9 +53,11 @@
 .track-form-input-file {
     margin: 20px 5px 0 5px;
 }
+
 .track-form-input-file input {
     margin: 0 5px;
 }
+
 .track-form-input-file select {
     margin: 0 5px;
 }
