--- a/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
+++ b/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .submitButtonWithLoadingIcon>button {
@@ -50,6 +50,7 @@
     align-items: center;
 }
 
+
 .track-form-input-file {
     margin: 20px 5px 0 5px;
 }
@@ -65,6 +66,8 @@
 .track-form-input input {
     width: 100%;
     margin: 0 5px;
+    height: 20px;
+    border-radius: 4px;
 }
 
 .track-form {
