--- a/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
+++ b/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
@@ -50,24 +50,19 @@
   cursor: pointer;
 }
 
-.track-details-update {
+
+.track-details-button {
   width: 40px;
   height: 40px;
   margin: 0 10px;
+  transition: 250ms ease all;
 }
 
-.track-details-update:hover {
+.track-details-button:hover {
+  transform: scale(1.3);
   cursor: pointer;
 }
 
-.track-details-delete {
-  width: 40px;
-  height: 40px;
-}
-
-.track-details-delete:hover {
-  cursor: pointer;
-}
 
 .play-update-delete-div {
   display: flex;
