--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -35,6 +35,10 @@
   cursor: pointer;
 }
 
+.profile-dropdown-guest-item>li:hover {
+  text-decoration: underline;
+}
+
 .navbar {
   overflow: hidden;
   display: flex;
@@ -45,7 +49,7 @@
   transition: 0.5s;
   box-sizing: border-box;
   width: 100%;
-  height: 8vh;
+  height: 100px;
   top: 0;
 }
 
@@ -85,10 +89,11 @@
 .navigation-link {
   height: 35px;
   width: 35px;
-  margin: 0 10px 0 0 ;
+  margin: 0 10px 0 0;
   transition: height .25s ease, width .25s ease, color .25s ease;
   color: gray;
 }
+
 .navigation-link:hover {
   cursor: pointer;
   height: 45px;
@@ -102,7 +107,7 @@
   align-items: center;
   list-style: none;
   height: 100%;
-  margin: 0 15px 0 0 ;
+  margin: 0 15px 0 0;
 }
 
 .nav-logo-div {
