--- a/react-vite/src/components/AlbumComponents/AlbumFormPage/AlbumForm.css
+++ b/react-vite/src/components/AlbumComponents/AlbumFormPage/AlbumForm.css
@@ -5,3 +5,12 @@
     box-sizing: border-box;
     min-height: 84vh;
 }
+
+.track-form-input>input {
+    height: 30px;
+    border-radius: 5px;
+    background-color: var(--elevation16);
+    border: none;
+    color: var(--white);
+    padding-left: 5px;
+}
