--- a/react-vite/src/components/AlbumComponents/AlbumFormPage/AlbumForm.css
+++ b/react-vite/src/components/AlbumComponents/AlbumFormPage/AlbumForm.css
@@ -11,6 +11,6 @@
     border-radius: 5px;
     background-color: var(--elevation16);
     border: none;
-    color: var(--white);
+    color: white;
     padding-left: 5px;
 }
