--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -45,7 +45,11 @@
   width: 100%;
   margin: 0 5px;
   border-radius: 4px;
-  height: 20px;
+  height: 25px;
+  background-color: var(--elevation16);
+  color: white;
+  border: none;
+  padding-left: 5px;
 }
 
 .signup-form-input {
@@ -60,7 +64,11 @@
   width: 100%;
   margin: 0 5px;
   border-radius: 4px;
-  height: 20px;
+  height: 25px;
+  background-color: var(--elevation16);
+  color: white;
+  border: none;
+  padding-left: 5px;
 }
 
 .login-form-submit-button-div {
