--- a/react-vite/src/components/AlbumComponents/AlbumFormPage/AlbumForm.css
+++ b/react-vite/src/components/AlbumComponents/AlbumFormPage/AlbumForm.css
@@ -14,3 +14,16 @@
     color: white;
     padding-left: 5px;
 }
+
+.track-form-input-dropdown {
+    margin: 20px 5px 0 5px;
+}
+
+.track-form-input-dropdown>select {
+    background-color: var(--elevation16);
+    border: none;
+    border-radius: 4px;
+    color: white;
+    margin: 0 5px;
+    height: 30px;
+}
