--- a/react-vite/src/components/AlbumComponents/AlbumsIndex/AlbumsIndex.css
+++ b/react-vite/src/components/AlbumComponents/AlbumsIndex/AlbumsIndex.css
@@ -6,8 +6,8 @@
 
 .album-index-cards-container {
   display: flex;
+  max-width: 1900px;
   flex-direction: row;
-  max-width: 100%;
   flex-wrap: wrap;
   justify-content: center;
 }
