--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -1,12 +1,21 @@
+/* .track-player {
+    overflow: hidden;
+    position: sticky;
+    bottom: 0px;
+    height: 120px;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    box-sizing: border-box;
+} */
+
 .track-player {
     overflow: hidden;
     position: sticky;
     bottom: 0px;
     /* background-color: var(--purple); */
-    height: 8vh;
-    display: flex;
+    height: 120px;
     width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
     box-sizing: border-box;
 }
