add sidescrolling to user albums

--- a/react-vite/src/components/UserTracksAlbums/UserTracksAlbums.css
+++ b/react-vite/src/components/UserTracksAlbums/UserTracksAlbums.css
@@ -1,6 +1,8 @@
 .user-details-albums-div {
   display: flex;
-  justify-content: center;
+  white-space: nowrap;
+  overflow: auto;
+  padding: 0 20px;
 }
 
 .user-page-container {
