--- a/react-vite/src/components/UserTracksAlbums/UserTracksAlbums.css
+++ b/react-vite/src/components/UserTracksAlbums/UserTracksAlbums.css
@@ -4,6 +4,14 @@
   overflow: auto;
   padding: 0 20px;
 }
+.user-details-albums-div::-webkit-scrollbar {
+  width: 5px;
+  height: 15px;
+  background-color: #2b2d2e;
+}
+.user-details-albums-div::-webkit-scrollbar-thumb {
+  background: #000;
+}
 
 .user-page-container {
   box-sizing: border-box;
