media query for album details and track details headers

--- a/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
+++ b/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
@@ -35,6 +35,13 @@
   align-items: flex-end;
 }
 
+@media (max-width: 750px) {
+  .track-details-header-div {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .track-details-header-details-div {
   margin: 0 0 0 10px;
   width: 100%;
