--- a/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
+++ b/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
@@ -39,6 +39,13 @@
   align-items: flex-end;
 }
 
+@media (max-width: 750px) {
+  .album-details-header-div {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .album-details-header-details-div {
   margin: 0 0 0 10px;
   width: 100%;
