--- a/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
+++ b/react-vite/src/components/TrackComponents/TrackCard/TrackCard.css
@@ -26,10 +26,11 @@ body {
 .track-card-container {
     display: flex;
     width: 100%;
+    min-width: 330px;
     height: 20%;
     max-height: 20%;
     /* border-bottom: white 1px solid; */
-    padding: 20px;
+    padding: 20px 0;
     box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
