--- a/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
+++ b/react-vite/src/components/AlbumComponents/AlbumDetailsPage/AlbumDetailsPage.css
@@ -44,6 +44,9 @@
     flex-direction: column;
     align-items: center;
   }
+  .album-details-header-image-div {
+    margin: 3vh 0 0 0;
+  }
 }
 
 .album-details-header-details-div {
