--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,7 +1,7 @@
 .profile-dropdown {
   position: absolute;
-  top: 4vh;
-  right: 3vw;
+  top: 60px;
+  right: 15px;
   list-style-type: none;
 }
 
@@ -11,6 +11,7 @@
   background: #2b2d2e;
   border-radius: 5px;
   padding: 20px;
+
 }
 
 .profile-dropdown-menu>li>a {
