--- a/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
+++ b/react-vite/src/components/TrackComponents/TrackDetailsPage/TrackDetailsPage.css
@@ -2,7 +2,7 @@
   background-image: linear-gradient(to bottom, rgb(43, 101, 181) 30%, rgba(255, 0, 0, 0));
   background-size: 100% 40vh;
   background-repeat: no-repeat;
-  min-height: 84vh;
+  min-height: 100%;
 }
 
 .track-details-header-image-div {
@@ -40,6 +40,7 @@
     flex-direction: column;
     align-items: center;
   }
+  
 }
 
 .track-details-header-details-div {
@@ -92,7 +93,6 @@
 
 
   .track-details-header-image-div {
-    width: 100%;
-    margin: 5vh 0 0 3vh;
+    margin: 3vh 0 0 0;
   }
 }
